--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         </div>
         <div class="footer">
             <p>&copy; Copyright 2021, All Rights Reserved.</p> July 12, 2021
+            <p>Credits : Renz Abellanosa Aggabao</p>
     </div>
     </div>
 </body>
