--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
             </div>
         </div>
         <div class="footer">
-            <p>&copy; Copyright 2021, All Rights Reserved.</p> July 12, 2021
-            <p>Credits : Renz Abellanosa Aggabao</p>
+            <p>&copy; Copyright 2021, All Rights Reserved.</p> July 12, 2021 Credits : Renz Abellanosa Aggabao
     </div>
     </div>
 </body>
